manifest.K8s/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: corso-db
  labels:
    app: corso-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: corso-db
  template:
    metadata:
      labels:
        app: corso-db
    spec:
      volumes:
        - name:  db-data-volume
          persistentVolumeClaim:
            claimName: db-pv-claim
      containers:
        - name: corso-db
          image: postgres:13-alpine
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: db-data-volume
              mountPath: /var/lib/postgresql/data
          ports:
            - name: http
              containerPort: 5432
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "postgres" -h 127.0.0.1 -p 5432
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "postgres" -h 127.0.0.1 -p 5432
          resources:
             limits:
              cpu: 300m
              memory: 300Mi
             requests:
              cpu: 200m
              memory: 200Mi
---
apiVersion: v1
kind: Service
metadata:
  name: corso-db
  labels:
    app: corso-db
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: corso-db
