manifest.K8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: corso-api
  labels:
    app: corso-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: corso-api
  template:
    metadata:
      labels:
        app: corso-api
    spec:
      volumes:
        - name:  appsettings-volume
          configMap:
            name: corso-config
      containers:
        - name: corso-api
          image: eganghereti/corso-api:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: appsettings-volume
              mountPath: /app/appsettings.json
              subPath: appsettings.json
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
              httpGet:
                  path: /health
                  port: http
          readinessProbe:
              httpGet:
                  path: /health
                  port: http
          resources:
             limits:
              cpu: 300m
              memory: 200Mi
             requests:
              cpu: 200m
              memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: corso-api
  labels:
    app: corso-api
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: corso-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: corso-api
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app: corso-api
spec:
  rules:
    - http:
        paths:
        - path: /corso-api
          pathType: Prefix
          backend:
            service:
              name: corso-api
              port:
                number: 8080
